<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/MainTitle"
        android:layout_width="360dp"
        android:layout_height="134dp"
        android:text="@string/MainTitle"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <ImageView
        android:id="@+id/rutas"
        android:layout_width="227dp"
        android:layout_height="206dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="252dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainTitle"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/map" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="9dp"
        android:background="#44915a"
        android:text="@string/inicioSesion"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="3dp"
        android:background="#44915a"
        android:backgroundTint="#44915a"
        android:foregroundTint="#44915A"
        android:text="@string/registro"
        android:textColor="#000000"
        android:textColorHighlight="#44915A"
        android:textColorLink="#44915A"
        app:iconTint="#44915a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:rippleColor="#44915A"
        app:strokeColor="#44915A" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="81dp"
        android:layout_height="50dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/Nombre"
        app:layout_constraintBottom_toTopOf="@+id/editTextText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rutas" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/carnet"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="9dp"
        android:text="@string/nocuenta"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>