<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="55dp"
        android:layout_height="60dp"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="35dp" />

    <TextView
        android:id="@+id/tipoViaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="178dp"
        android:text="@string/tipoviaje"
        app:layout_constraintBottom_toTopOf="@+id/switch1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sinde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="33dp"
        android:text="@string/sindesvios"
        app:layout_constraintBottom_toTopOf="@+id/mapa"
        app:layout_constraintEnd_toStartOf="@+id/switch1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/amiguis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="31dp"
        android:text="@string/amiguis"
        app:layout_constraintBottom_toTopOf="@+id/mapa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/switch1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mapa"
        android:layout_width="440dp"
        android:layout_height="478dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/eta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        app:srcCompat="@drawable/mapa" />

    <TextView
        android:id="@+id/eta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="323dp"
        android:layout_marginBottom="114dp"
        android:text="@string/eta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapa" />
</androidx.constraintlayout.widget.ConstraintLayout>